--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,54 @@
-// TODO
+@use "../styles/util" as *;
+
+.postContainer {
+    .postContent {
+        max-width: 700px;
+        margin: 0 auto;
+
+        section {
+        
+            h2 {
+                font-size: rem(28);
+                font-weight: 700;
+                line-height: rem(33.89);
+                color: var(--heading);
+
+                transition: color 0.2s;
+
+                &:hover{
+                    color: var(--highlight);
+                }
+            }
+
+            p {
+                font-size:rem(18);
+                line-height: rem(21.78);
+                margin-top: rem(8);
+                color: var(--body);
+            }
+
+            
+
+            & + section {
+                margin-top: rem(48);
+            }
+        }
+       
+    }
+    
+
+    button{
+        color: var(--highlight);
+        background: transparent;
+        border: 0;
+        margin-top: rem(64);
+        transition: filter 0.2s;
+
+        &:hover {
+            filter: brightness(0.8);
+        }
+    }
+
+    
+    
+}
