--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,13 @@
-// TODO
+@use "../../styles/util" as *;
+
+.headerContainer{
+    height: rem(105);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.headerContent{
+    width: 700px;
+    margin: 0 auto;
+}
