--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,72 @@
-// TODO
+@use "../../styles/util" as *;
+.postContainer{
+    img{
+        max-height: rem(400);
+        margin: 0 auto;
+        display: block;
+    }
+
+    .postContent {
+        max-width: 700px;
+        margin: 0 auto;
+
+        h2 {
+            font-size: rem(48);
+            line-height: rem(58.09);
+
+            margin-top: rem(80);
+        }
+
+        h3 {
+            font-size: rem(36);
+            font-weight: bold;
+            line-height: rem(50);
+            margin: rem(36) 0;
+        }
+
+        p {
+            font-size: rem(18);
+            font-weight: 400;
+            line-height: rem(25);
+            margin: rem(36) 0;
+            text-align: justify;
+
+            a {
+                color: var(--highlight);
+                transition: filter 0.2s;
+
+                &:hover {
+                    filter: brightness(0.8);
+                }
+            }
+        }
+
+        pre {
+            background: var(--heading);
+            padding: rem(20);
+            color: var(--background);
+            font-weight: 700;
+        }
+
+        ul {
+            margin-left: rem(20);
+            li {
+                margin: rem(20) 0;
+                font-size: rem(18);
+                font-weight: 400;
+                line-height: rem(25);
+                text-align: justify;
+
+                a {
+                    color: var(--highlight);
+                    transition: filter 0.2s;
+    
+                    &:hover {
+                        filter: brightness(0.8);
+                    }
+                }
+            }
+        }
+    }
+
+}
