--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,36 @@
+@use "util" as *;
+@import "colors.scss";
+
+
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-// TODO
+html {
+  @include breakpoint-down(larger){
+    font-size: 93.75%; // 15
+  }
+  @include breakpoint-down(medium){
+    font-size: 87.5%; // 14
+  }
+}
+
+body {
+  background: var(--background);
+  color: var(--body);
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
